@startuml SI_Bimbingan_Konseling_ERD

!define TABLE(x) entity x << (T,#FFAAAA) >>
!define PK(x) <b>x</b>
!define FK(x) <i>x</i>

skinparam backgroundColor #FEFEFE
skinparam entity {
  BackgroundColor LightYellow
  BorderColor Black
  FontSize 12
}
skinparam linetype ortho

entity Admin {sistem 
  * PK(id_admin) : INT <<AUTO_INCREMENT>>
  --
  nama_admin : VARCHAR(100) <<NOT NULL>>
  email_admin : VARCHAR(100) <<UNIQUE, NOT NULL>>
  password : VARCHAR(255) <<NOT NULL>>
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity Guru {
  * PK(id_guru) : INT <<AUTO_INCREMENT>>
  --
  nama_guru : VARCHAR(100) <<NOT NULL>>
  nik : VARCHAR(20) <<UNIQUE, NOT NULL>>
  tempat_lahir : VARCHAR(50)
  tanggal_lahir : DATE
  jenis_kelamin : ENUM('L','P')
  pendidikan_terakhir : VARCHAR(50)
  jurusan : VARCHAR(50)
  jabatan : VARCHAR(50)
  status_aktif : ENUM('Aktif','Tidak Aktif')
  no_telepon : VARCHAR(15)
  email_guru : VARCHAR(100) <<UNIQUE>>
  password : VARCHAR(255) <<NOT NULL>>
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity Kelas {
  * PK(id_kelas) : INT <<AUTO_INCREMENT>>
  --
  nama_kelas : VARCHAR(20) <<NOT NULL>>
  kelas_kejuruan : VARCHAR(50)
  FK(guruId) : INT <<WALI KELAS>>
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity OrangTua {
  * PK(id_orang_tua) : INT <<AUTO_INCREMENT>>
  --
  nama_ayah : VARCHAR(100)
  nama_ibu : VARCHAR(100)
  nik_ayah : VARCHAR(20) <<UNIQUE>>
  nik_ibu : VARCHAR(20) <<UNIQUE>>
  email_ayah : VARCHAR(100)
  email_ibu : VARCHAR(100)
  password : VARCHAR(255) <<NOT NULL>>
  no_telepon_ayah : VARCHAR(15)
  no_telepon_ibu : VARCHAR(15)
  pekerjaan_ayah : VARCHAR(50)
  pekerjaan_ibu : VARCHAR(50)
  alamat_ayah : TEXT
  alamat_ibu : TEXT
  pendidikan_ayah : VARCHAR(50)
  pendidikan_ibu : VARCHAR(50)
  penghasilan_ayah : DECIMAL(15,2)
  penghasilan_ibu : DECIMAL(15,2)
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity Siswa {
  * PK(id_siswa) : INT <<AUTO_INCREMENT>>
  --
  nama_siswa : VARCHAR(100) <<NOT NULL>>
  nis : VARCHAR(20) <<UNIQUE, NOT NULL>>
  nisn : VARCHAR(20) <<UNIQUE>>
  FK(orangTuaId) : INT
  FK(kelas_id) : INT <<NOT NULL>>
  jenis_kelamin : ENUM('L','P')
  tempat_lahir : VARCHAR(50)
  tanggal_lahir : DATE
  alamat : TEXT
  no_telepon : VARCHAR(15)
  email_siswa : VARCHAR(100) <<UNIQUE>>
  password : VARCHAR(255) <<NOT NULL>>
  foto_profil : VARCHAR(255)
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity JenisPelanggaran {
  * PK(id_jenis_pelanggaran) : INT <<AUTO_INCREMENT>>
  --
  nama_jenis_pelanggaran : VARCHAR(100) <<NOT NULL>>
  kategori_pelanggaran : ENUM('Ringan','Sedang','Berat')
  deskripsi : TEXT
  tindakan_sekolah : TEXT
  poin_pelanggaran : INT <<NOT NULL>>
  FK(admin_id) : INT
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity PelanggaranSiswa {
  * PK(id_pelanggaran_siswa) : INT <<AUTO_INCREMENT>>
  --
  FK(siswaId) : INT <<NOT NULL>>
  FK(jenisPelanggaranId) : INT <<NOT NULL>>
  FK(guruId) : INT
  tanggal_pelanggaran : DATE <<NOT NULL>>
  tempat_kejadian : VARCHAR(100)
  kronologi : TEXT
  catatan_konseling : TEXT
  tindak_lanjut : TEXT
  status_konseling : ENUM('Pending','Proses','Selesai')
  bukti_pelanggaran : VARCHAR(255)
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity TanggapanOrangTua {
  * PK(id_tanggapan) : INT <<AUTO_INCREMENT>>
  --
  FK(orangTuaId) : INT <<NOT NULL>>
  FK(pelanggaranSiswaId) : INT <<NOT NULL>>
  tanggal_tanggapan : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
  isi_tanggapan : TEXT <<NOT NULL>>
  tindakan_rumah : VARCHAR(255)
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity TindakanSekolah {
  * PK(id_tindakan) : INT <<AUTO_INCREMENT>>
  --
  FK(pelanggaranSiswaId) : INT <<NOT NULL>>
  FK(guruId) : INT <<NOT NULL>>
  tanggal_tindakan : DATE <<NOT NULL>>
  jenis_tindakan : ENUM('Teguran','Peringatan','Skorsing','Lainnya')
  deskripsi_tindakan : TEXT
  hasil_tindakan : TEXT
  status_tindakan : ENUM('Direncanakan','Dilaksanakan','Selesai')
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity Laporan {
  * PK(id_laporan) : INT <<AUTO_INCREMENT>>
  --
  periode_awal : DATE
  periode_akhir : DATE
  total_pelanggaran : INT
  total_tindakan : INT
  total_poin : INT
  tanggal_generate : TIMESTAMP <<DEFAULT CURRENT_TIMESTAMP>>
  FK(guru_id) : INT
  jenis_laporan : ENUM('Bulanan','Semester','Tahunan')
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
  deletedAt : TIMESTAMP <<SOFT DELETE>>
}

entity Notification {
  * PK(id_notification) : INT <<AUTO_INCREMENT>>
  --
  FK(userId) : INT <<NOT NULL>>
  userType : ENUM('admin','guru','siswa','orang_tua')
  title : VARCHAR(255) <<NOT NULL>>
  message : TEXT <<NOT NULL>>
  type : ENUM('info','success','warning','error')
  isRead : BOOLEAN <<DEFAULT FALSE>>
  FK(relatedId) : INT
  relatedType : VARCHAR(50)
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity ActivityLog {
  * PK(id_log) : INT <<AUTO_INCREMENT>>
  --
  FK(userId) : INT
  userType : ENUM('admin','guru','siswa','orang_tua')
  action : VARCHAR(50) <<NOT NULL>>
  target : VARCHAR(50)
  FK(targetId) : INT
  details : JSON
  ipAddress : VARCHAR(45)
  userAgent : TEXT
  --
  createdAt : TIMESTAMP
}

entity SavedFilter {
  * PK(id_filter) : INT <<AUTO_INCREMENT>>
  --
  FK(userId) : INT <<NOT NULL>>
  userType : ENUM('admin','guru','siswa','orang_tua')
  filterName : VARCHAR(100) <<NOT NULL>>
  filterType : VARCHAR(50)
  filterData : JSON <<NOT NULL>>
  isDefault : BOOLEAN <<DEFAULT FALSE>>
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity FileUpload {
  * PK(id_file) : INT <<AUTO_INCREMENT>>
  --
  originalName : VARCHAR(255) <<NOT NULL>>
  fileName : VARCHAR(255) <<NOT NULL>>
  filePath : VARCHAR(500) <<NOT NULL>>
  fileType : VARCHAR(50)
  fileSize : INT
  FK(uploadedBy) : INT
  uploaderType : ENUM('admin','guru','siswa','orang_tua')
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

Admin ||--o{ JenisPelanggaran : "creates/manages"
Guru ||--o{ Kelas : "wali kelas"
Kelas ||--o{ Siswa : "has students"
OrangTua ||--o{ Siswa : "has children"
Siswa ||--o{ PelanggaranSiswa : "commits violations"
Guru ||--o{ PelanggaranSiswa : "reports violations"
JenisPelanggaran ||--o{ PelanggaranSiswa : "categorizes"
PelanggaranSiswa ||--o{ TanggapanOrangTua : "receives responses"
OrangTua ||--o{ TanggapanOrangTua : "gives responses"
PelanggaranSiswa ||--o{ TindakanSekolah : "receives actions"
Guru ||--o{ TindakanSekolah : "executes actions"
Guru ||--o{ Laporan : "generates reports"

note right of PelanggaranSiswa
  **ENTITAS UTAMA SISTEM**
  - Mencatat setiap pelanggaran siswa
  - Terhubung ke Siswa, JenisPelanggaran, Guru
  - Memicu notifikasi ke Orang Tua
  - Basis untuk Tindakan & Tanggapan
  - Soft delete untuk audit trail
end note

note left of Siswa
  **DATA SISWA**
  - NIS dan NISN unique
  - Email untuk login
  - Password di-hash dengan bcrypt
  - Relasi ke Kelas dan OrangTua
  - Soft delete (tidak permanen)
end note

note right of JenisPelanggaran
  **KATEGORI PELANGGARAN**
  - Ringan: 1-25 poin
  - Sedang: 26-50 poin
  - Berat: 51-100 poin
  - Poin akumulatif per siswa
  - Dikelola oleh Admin
end note

note left of TanggapanOrangTua
  **KOMUNIKASI ORANG TUA**
  - Tanggapan terhadap pelanggaran
  - Tindakan yang akan diambil di rumah
  - Real-time notification
  - History lengkap tersimpan
end note

note right of TindakanSekolah
  **TINDAK LANJUT SEKOLAH**
  - Teguran, Peringatan, Skorsing
  - Dilaksanakan oleh Guru BK
  - Status tracking (Direncanakan → Selesai)
  - Dokumentasi lengkap
end note

note bottom of Notification
  **SISTEM NOTIFIKASI**
  - Real-time dengan Socket.io
  - Email notifications
  - Per user type
  - Mark as read/unread
end note

note bottom of ActivityLog
  **AUDIT TRAIL**
  - Log semua aktivitas CRUD
  - Track user IP & browser
  - Untuk keamanan & debugging
  - Retention: 90 hari
end note

legend right
  **KONVENSI:**
  • PK = Primary Key (Bold)
  • FK = Foreign Key (Italic)
  • Soft Delete = deletedAt timestamp
  • ENUM = Fixed value options
  • JSON = JSON data type
  
  **RELATIONSHIP:**
  • ||--o{ = One-to-Many
  • ||--|| = One-to-One
  • }o--o{ = Many-to-Many
  
  **SISTEM AUTENTIKASI:**
  • 4 Role: Admin, Guru, Siswa, Orang Tua
  • JWT Authentication
  • Password hashed dengan bcrypt
  • Session management dengan token
end legend

@enduml
